<resources>
    <string name="server_client_id">808582597957-6ca5k9pa4sab9itqm4o4fafbo7a69b6l.apps.googleusercontent.com</string>
    <string name="facebook_app_id">507437986495212</string>
    <string name="fb_login_protocol_scheme">fb507437986495212</string>

    <string name="app_name">KoraGoal</string>
    <string name="firstName">اسم المستخدم</string>
    <string name="email">البريد الالكتروني</string>
    <string name="password">كلمة المرور</string>
    <string name="singUp">تسجيل حساب جديد</string>
    <string name="alreadyHaveAccount">امتلك حساب بالفعل, </string>
    <string name="login">تسجيل الدخول</string>
    <string name="login1">تسجيل دخول</string>
    <string name="newAccount">حساب جديد</string>
    <string name="loginWith">الدخول بواسطة</string>
    <string name="google">جوجل</string>
    <string name="facebook">فيس بوك</string>
    <string name="home">الرئيسية</string>
    <string name="notifications">الاشعارات</string>
    <string name="favourites">المفضلة</string>
    <string name="newsPaper">الاخبار</string>
    <string name="champoins">البطولات</string>
    <string name="topScorer">ترتيب الهدافين</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="settings">الاعدادات</string>
    <string name="outFacebook">حسابنا علي الفيس بوك</string>
    <string name="ResetPassword">اعادة تعين كلمة السر</string>
    <string name="confirmPassword">تأكيد كلمة السر</string>
    <string name="reset">اعادة تعين</string>
    <string name="ResetPassword2">استعادة كلمة السر</string>
    <string name="mateches">المباريات</string>
    <string name="latestNews">اخر الاخبار</string>
    <string name="order">الترتيب</string>
    <string name="players">اللاعبون</string>
    <string name="order_tv">ت</string>
    <string name="order_name_tv">الفريق</string>
    <string name="played_tv">لعب</string>
    <string name="win_tv">ف</string>
    <string name="lose_tv">خ</string>
    <string name="draw_tv">ت</string>
    <string name="goals_tv">اهداف</string>
    <string name="points_tv">نقاط</string>
    <string name="player_name_tv">اللاعب</string>
    <string name="the_goals_tv">الاهداف</string>
    <string name="freeKiks_tv">ضربات الجزاء</string>
    <string name="match_events">احداث المبارة</string>
    <string name="match_details">التفاصيل</string>
    <string name="scorers">الهدافون</string>
    <string name="champoin">البطولة</string>
    <string name="studium">ملعب المباراة</string>
    <string name="channel">القناة الناقلة</string>
    <string name="commentator">معلق المباراة</string>
    <string name="match_time">وقت المباراة</string>
    <string name="match_date">تاريخ المباراة</string>
    <string name="reminder_matches">تذكير بالمباريات</string>
    <string name="activate_notifications">تفعيل الاشعارات</string>
    <string name="silence">وضع عدم الازعاج</string>
    <string name="details">التفاصيل</string>
    <string name="goals_tv2">الاهداف</string>
    <string name="reverse_goals">الاهداف العكسيه</string>
    <string name="successful_penalty">ضربات جزاء ناجحة</string>
    <string name="missed_penalty">ضربات جزاء ضائعة</string>
    <string name="yellow_Card">الكروت الصفراء</string>
    <string name="red_Card">الكروت الحمراء</string>
    <string name="error_general">حدث خطأ ما</string>
    <string name="live">مباشر</string>
    <string name="kora_extra">Kora Goal</string>
    <string name="no_matches">لا توجد مباريات</string>
    <string name="no_favorite">لا توجد مفضله</string>
    <string name="noConnectionMessage">لا يوجد اتصال بالانترنت</string>
    <string name="refresh">تحديث</string>
    <string name="not_started">لم تبدأ</string>
    <string name="match_ended">انتهي</string>
    <string name="emptyEvents">لا توجد احداث للمباراة</string>
    <string name="emptyTops">لا توجد بيانات</string>
    <string name="emptyLeagues">لا توجد بطولات</string>
    <string name="seasons">المواسم</string>
    <string name="empty_user_name">اسم المستخدم فارغ</string>
    <string name="empty_email">البريد الالكتروني فارغ</string>
    <string name="empty_password">حقل كلمة المرور فارغ</string>
    <string name="you_must_login">يجب تسجيل الدخول اولا</string>
    <string name="logOut">تسجيل الخروج</string>
    <string name="teamAddedToFavorite">تم اضافة الفريق الي المفضله</string>
    <string name="teamRemovedFromFavorite">تم حذف الفريق من المفضله</string>
    <string name="no_leagueTable">لا توجد مجموعات</string>
    <string name="tryAgainLater">حدث خطأ ما حاول مرة اخري لاحقااا</string>
    <string name="email_sent_message">تم ارسال البيانات بنجاح الي بريدك الالكتروني</string>
    <string name="empry_notifications">لا توجد اشعارات</string>
    <string name="loginSuccess">تم تسجيل الدخول بنجاح</string>
    <string name="shearApp">مشاركة التطبيق</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="round">الجولة</string>
    <string name="videos">الفيديوهات</string>
</resources>
