<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/nav_Home"
        android:icon="@drawable/football_field"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/ic_notifications_active_white_24dp"
        android:title="@string/notifications" />

    <item
        android:id="@+id/nav_favourites"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:title="@string/favourites" />

    <item
        android:id="@+id/nav_newsPaper"
        android:icon="@drawable/newspaper"
        android:title="@string/newsPaper" />

    <item
        android:id="@+id/nav_champions"
        android:icon="@drawable/champions"
        android:title="@string/champoins" />

    <item
        android:id="@+id/nav_TopScorer"
        android:icon="@drawable/podium"
        android:title="@string/topScorer"
        android:visible="false"/>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/settings" />

    <item
        android:id="@+id/nav_shearApp"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/shearApp" />

    <item
        android:id="@+id/nav_login"
        android:icon="@drawable/ic_login"
        android:title="@string/login" />

    <item
        android:id="@+id/nav_Social"
        android:title=""
        app:actionLayout="@layout/facebook_menu_item"
        app:showAsAction="always"
        />

</menu>