<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mainActivity.team.teamGroup.TeamGroupFragment">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/order_tv"
            android:textAppearance="?attr/textAppearanceCaption" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/order_name_tv"
            android:textAppearance="?attr/textAppearanceCaption" />

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/played_tv"
            android:textAppearance="?attr/textAppearanceCaption" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/win_tv"
            android:textAppearance="?attr/textAppearanceCaption" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/lose_tv"
            android:textAppearance="?attr/textAppearanceCaption" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:padding="8dp"
            android:text="@string/draw_tv"
            android:textAppearance="?attr/textAppearanceCaption" />


        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:text="@string/goals_tv"
            android:textAppearance="?attr/textAppearanceCaption" />

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/points_tv"
            android:textAppearance="?attr/textAppearanceCaption" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/groupNameLinear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/header"
        app:layout_constraintStart_toStartOf="@id/header"
        app:layout_constraintTop_toBottomOf="@id/header">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:background="@android:color/darker_gray" />


        <TextView
            android:id="@+id/groupNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:text="المجموعة A"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="@android:color/darker_gray" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/teamGroupRv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/groupNameLinear"
        tools:listitem="@layout/team_in_group_item_view" />

</androidx.constraintlayout.widget.ConstraintLayout>