<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.mainActivity.match.matchTops.MatchTopsFragment">

    <LinearLayout
        android:id="@+id/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/order_tv"
            android:textAppearance="?attr/textAppearanceCaption" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/player_name_tv"
            android:textAppearance="?attr/textAppearanceCaption" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:text="@string/the_goals_tv"
            android:textAppearance="?attr/textAppearanceCaption" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/freeKiks_tv"
            android:textAppearance="?attr/textAppearanceCaption" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/matchPlayerRv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        tools:listitem="@layout/player_in_team_item_view" />

</androidx.constraintlayout.widget.ConstraintLayout>